<?xml version="1.0" encoding="utf-8"?>

<!--Earl Platt III
//BCS421 - Android
//9/30/2018
//App That is A Login & Registration Page
/////////////////////////////////
//Input: User Enters
//       -Username & Password
//       -First Name, Last Name,
//        Date of Birth, Email,
//Output: Allows User to Register & Login -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tatto_model2"
    tools:context=".Login_Reg2">

    <!--Layout to Display Text, Scroll, & Button-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/reg_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cloister_black"
                android:gravity="center"
                android:text="@string/reg_title"
                android:textColor="@android:color/black"
                android:textSize="50sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/reg_title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cloister_black"
                android:gravity="center"
                android:text="@string/reg_title2"
                android:textColor="@android:color/black"
                android:textSize="50sp"
                app:layout_constraintTop_toBottomOf="@id/reg_title" />

            <EditText
                android:id="@+id/edit_firstname_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:alpha=".33"
                android:background="#d3d3d3"
                android:gravity="center"
                android:hint="@string/first_name_edit"
                android:textColorHint="#000000"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reg_title2"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/edit_lastname_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:alpha=".33"
                android:background="#d3d3d3"
                android:gravity="center"
                android:hint="@string/last_name_edit"
                android:textColorHint="#000000"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_firstname_reg"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/edit_dob_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:alpha=".33"
                android:background="#d3d3d3"
                android:gravity="center"
                android:hint="@string/dob_edit"
                android:textColorHint="#000000"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_lastname_reg"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/edit_email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:alpha=".33"
                android:background="#d3d3d3"
                android:gravity="center"
                android:hint="@string/email_edit"
                android:textColorHint="#000000"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_dob_reg"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/edit_password_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:alpha=".33"
                android:background="#d3d3d3"
                android:gravity="center"
                android:hint="@string/password_edit"
                android:textColorHint="#000000"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_email_reg"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="person_reg"
                android:text="@string/btn_name2"
                android:textColor="@color/btn_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_email_reg"

                app:layout_constraintVertical_bias="0.715" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>