<?xml version="1.0" encoding="utf-8"?>

<!--Earl Platt III
//BCS421 - Android
//9/30/2018
//App That is A Login & Registration Page
/////////////////////////////////
//Input: User Enters
//       -Username & Password
//       -First Name, Last Name,
//        Date of Birth, Email,
//Output: Allows User to Register & Login -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tatto_model"
    tools:context=".Login_Reg"
    >

    <!--Layout to Display Text, Scroll, & Button-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cloister_black"
                android:gravity="left"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="42sp"
                />

            <TextView
                android:id="@+id/text_view2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cloister_black"
                android:gravity="left"
                android:paddingLeft="60dp"
                android:text="@string/title2"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                app:layout_constraintTop_toBottomOf="@id/text_view" />

            <TextView
                android:id="@+id/spacer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="50dp"/>

            <EditText
                android:id="@+id/edit_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha=".75"
                android:background="#d3d3d3"
                android:gravity="center"
                android:hint="@string/edit_text1"
                android:textColorHint="#000000" />

            <TextView
                android:id="@+id/spacer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"/>

            <EditText
                android:id="@+id/edit_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".75"
                android:background="#d3d3d3"
                android:gravity="center"
                android:hint="@string/edit_text2"
                android:textColorHint="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text1"
                app:layout_constraintVertical_bias="0.147" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="read_login_info"
                android:text="@string/btn_name"
                android:textColor="@color/btn_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text2"
                app:layout_constraintVertical_bias="0.543" />


            <TextView
                android:id="@+id/spacer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="45dp"/>


            <TextView
                android:id="@+id/text_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:alpha=".5"
                android:background="#d3d3d3"
                android:gravity="center"
                android:text="@string/link"
                android:textColor="@color/link_color"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/spacer3"/>



        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>